fix problem with never ending gtk.main()

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,6 +15,7 @@ done by:
 Further patches have been submitted by:
 
   William Sheehan <william-dot-sheehan-at-openinterface-dot-com>
+  Karel Zak <kzak-at-redhat-dot-com>
 
   <...send a patch & get your name here...>
 
