--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,7 @@ Further patches have been submitted by:
 
   William Sheehan <william-dot-sheehan-at-openinterface-dot-com>
   Karel Zak <kzak-at-redhat-dot-com>
+  Damien Durand (splinux25-at-gmail-dot-com)
 
   <...send a patch & get your name here...>
 
