Summary of 0.2.6 release changes

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,20 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.2.6
+-------------
+
+The release focus has been on major bug fixing. This is also the
+first release in which (partial) translations are available for
+the UI in approximately 20 languages - thanks to the Fedora i18n
+team for excellant progress on this. It is now possible to control 
+the virt-manager UI with command line arguments as well as the DBus
+API & it DBus activation is no longer used by default which fixes
+interaction with GNOME keyring & AT-SPI accesibility. Numerous
+UI issues were fixed / clarified, particularly in the graphical 
+console and new VM creation wizard.
+
+
 Release 0.1.4
 -------------
 
