Fixed keyboard grab

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,7 +16,9 @@ Further patches have been submitted by:
 
   William Sheehan <william-dot-sheehan-at-openinterface-dot-com>
   Karel Zak <kzak-at-redhat-dot-com>
-  Damien Durand (splinux25-at-gmail-dot-com)
+  Damien Durand <splinux25-at-gmail-dot-com>
+  Charles Coffing <ccoffing-at-novell-dot-com>
+
 
   <...send a patch & get your name here...>
 
